[b]Version 14.9.0.x[/b]:

(2015-02-26)
 * The flip and mirror options don't restart mpv.

(2015-02-25)
 * The blur and sharpen filters don't restart mpv.

(2015-02-23)
 * Change the play/pause icon according to the player state in the default
   and mini GUIs.

(2015-02-19)
 * Now the following filters don't restart mpv when they are turned on/off:
   add black borders, gradfun, add noise and software scaling.

(2015-02-18)
 * New action show_time (assigned by default to key I). It shows the current
   playback time, total time and percentage, for 2 seconds on the OSD.
 * (Experimental) Now, if using mpv, the option to add black borders doesn't
   restart mpv.

(2015-02-14)
 * Allow duplicate items in the playlist.

(2015-02-06)
 * Add new option in the playlist section in preferences:
   "Play next file even if the previous file failed"
   If the option is enabled, when a file fails to play (mplayer crashes or
   exits with an error code), the playlist will play the next file in the
   list.

(2015-02-01)
 * Add an option in the toolbar editor to set the size of the icons.
   (Currently it doesn't look good if you increase the size of the icons
   in the skin gui).

(2015-01-31)
 * Add the options -ontop and -no-ontop for the command line.
   They just change the "Stay on top" options in the preferences.

(2015-01-21)
 * Add a combobox in Preferences -> Performance to select the hardware
   decoding option (mpv only).

(2015-01-18)
 * (mpv) Don't use the pp filter if it's not available 

(2015-01-16)
 * Fix for Youtube.

(2014-12-31)
 * (Videopreview) Use -nofontconfig to prevent to create the font cache.

(2014-12-16)
 * New version of the installer, which offers the user the possibility
   to install mpv (will be downloaded). By redxii.

(2014-12-12)
 * Add an option to change the size of the OSD.

(2014-11-29)
 * Add an option to enable or disable the internal Youtube support.
 * Add an option to enable streaming sites (requires mpv and youtube-dl).
