@@ -116,6 +116,10 @@ void MplayerProcess::addVF(const QString & filter_name, const QVariant & value) 
 		arg << "-vf-add" << "pp=" + option;
 	}
 	else
+	if (filter_name == "dering") {
+		arg << "-vf-add" << "pp=dr";
+	}
+	else
 	if (filter_name == "subs_on_screenshots") {
 		if (option == "ass") {
 			arg << "-vf-add" << "ass";
